# trace

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  MANIFEST.in  NOTICE  README.md  THIRD_PARTY_NOTICES.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs-ci.yml  public-ci.yml
constraints/: compat-py314.txt  release.txt
docs/: ACTIVE_TASK_INVENTORY.md  ASSETS.md  DATA_FORMAT.md  DEVELOPMENT.md  QUICKSTART.md  README.md  TASK_CATALOG.md  VERIFIERS.md
docs/contracts/: ANNOTATION_AND_REWARD_CONTRACTS.md  BLUEPRINT.md  PROGRAM_SCHEMA_CATALOG.md  PROMPT_SYSTEM.md  README.md  SOURCE_LAYOUT.md  SYSTEM_ARCHITECTURE.md  TASK_UNIT_POLICY.md  TAXONOMY.md  (+1 more)
examples/: README.md  export_dataset.py  generate_and_validate.py  replay_and_score.py
rlvr/: README.md  dataset_equivalence.v1.json  environment_receipt.v1.json  release_files.v1.json  requirements-cu128.txt  source_map.v1.json  train.py
scripts/: README.md  audit_text_legibility.py  build_release_dataset.py  check_docs_site.py  check_public_release.py  check_review_recipe.py  check_skill_consistency.py  generate_active_task_inventory.py  generate_paper_domain_montage.py  generate_release_gallery.py  generate_task_catalog.py
tests/: cell_board_annotation_helpers.py  helpers.py  test_annotation_artifacts.py  test_build_release_dataset.py  test_chart_scene_primitives.py  test_chart_scene_types.py  test_charts_annotated_series_tasks.py  test_charts_area_tasks.py  test_charts_balanced_sampling.py  test_charts_candlestick_tasks.py  test_charts_cartesian_shared_helpers.py  test_charts_choropleth_shared_helpers.py  test_charts_combo_tasks.py  test_charts_composition_panels_tasks.py  test_charts_composition_shared_helpers.py  test_charts_composition_tasks.py  test_charts_context_text_defaults.py  test_charts_contour_density_tasks.py  test_charts_core_scene_config.py  test_charts_counting_tasks.py  test_charts_dashboard_tasks.py  test_charts_density_curve_tasks.py  test_charts_distribution_tasks.py  test_charts_dumbbell_tasks.py  test_charts_error_interval_tasks.py  test_charts_errorbar_series_tasks.py  test_charts_flow_tasks.py  test_charts_heatmap_tasks.py  test_charts_hexbin_density_tasks.py  test_charts_hypothetical_tasks.py  test_charts_information_style_usage.py  test_charts_label_assets.py  test_charts_map_tasks.py  test_charts_matrix_tasks.py  test_charts_multiseries_tasks.py  test_charts_parallel_coords_tasks.py  test_charts_pictogram_tasks.py  test_charts_population_pyramid_tasks.py  test_charts_prompt_example_contracts.py  test_charts_radar_tasks.py  (+500 more)
(+5697 files in other folders)
